@@ -5131,6 +5131,26 @@ Bottom
 			  </child>
 
 			  <child>
+			    <widget class="GtkCheckButton" id="check_unfold_children">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Unfold all children of a fold point when unfolding it.</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Unfold all children of a fold point</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">False</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
 			    <widget class="GtkCheckButton" id="check_indicators">
 			      <property name="visible">True</property>
 			      <property name="tooltip" translatable="yes">Whether to use indicators (a squiggly underline) to highlight the lines where the compiler found a warning or an error.</property>
