@@ -4,6 +4,10 @@
    data/filetypes.ferite, data/filetypes.java, src/highlighting.c:
    Added new style for doc keyword error and added some doc key words
    for Doxygen and Javadoc.
+ * geany.glade, src/geany.h, src/interface.c, src/keyfile.c,
+   src/prefs.c, src/sci_cb.c:
+   Added new preference to unfold all children of a fold point if the
+   fold point is unfolded.
 
 
 2006-12-02  Enrico Tröger  <enrico.troeger@uvena.de>
